Added init package to GC lab